# reputils

./: .gitignore  Cargo.toml  README.md  TEST.fasta  test.html  ttc.fa
examples/: README.md  example.html  ramVar1-256#Unknown.gaps95.fa  ttc.fa
src/: con.rs  div.rs  dot.rs  html.rs  lib.rs  main.rs  tir.rs  tsd.rs  ttc.rs
src/utils/: alignment.rs  blocks.rs  mod.rs  revcomp.rs  seqcount.rs  windows.rs
